--- a/uppgift du2 /index.html
+++ b/uppgift du2 /index.html
@@ -10,8 +10,8 @@
 <body>
     <main>
         <section id="links">
-            <a href="">Länk till sidan på webben</a>
-            <a href="">Länk till Github repo</a>
+            <a href="http://webshare.mah.se/aq4363">Länk till sidan på webben</a>
+            <a href="https://github.com/feliciaeklund/U1distances.upggift">Länk till Github repo</a>
         </section>
         <section>
             <h1>Närmaste och längst bort i Centraleuropa</h1>
