--- a/uppgift du2 /index.html
+++ b/uppgift du2 /index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Distances</title>
-    <link href="fonts.css" rel="stylesheet">
-    <link href="index.css" rel="stylesheet">
+    <link href="styles/fonts.css" rel="stylesheet">
+    <link href="styles/index.css" rel="stylesheet">
 </head>
 <body>
     <main>
@@ -30,6 +30,6 @@
         </section>
     </main>
     <script src="index.js"></script>
-    <script src="database.js"></script>   
+    <script src="database/database.js"></script>   
 </body>
 </html>
